[gd_scene load_steps=2 format=3 uid="uid://ipihgnwkeewd"]

[ext_resource type="Script" path="res://game_scenes/score_screen.gd" id="1_flfwh"]

[node name="ScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flfwh")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Total Time (ms):"
horizontal_alignment = 2

[node name="TimeLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Total Misclicks:
"
horizontal_alignment = 2

[node name="MisclickLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "0"

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Adjusted Score (ms):
"
horizontal_alignment = 2

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "0"

[node name="Label4" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Best Score (ms):"
horizontal_alignment = 2

[node name="BestLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "0"

[node name="BestTimeLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.87451, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "New Best Time!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Try Again"
